// Copyright 2019 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto2";

package protobuf.contrib.j2cl.protos;

import "java/com/google/protobuf/contrib/j2cl/options.proto";

option java_package = "com.google.protobuf.contrib.j2cl.protos";

// REMOVED_BY_GENRULE option java_multiple_files = true;

message TestProtoWithOneOfs {
  oneof a_oneof {
    bool a_bool = 1;
    int32 an_int = 4;
    int64 a_long = 7;
    float a_float = 10;
    double a_double = 14;
    double double_with_default = 15 [default = 2.46];
  }

  enum TestEnum {
    UNKNOWN = 0;
    TWO = 1;
  }

  message TestNestedProto {
    optional string a_string = 1;
  }

  message TestNestedProtoWithOneOfs {
    oneof a_nested_oneof {
      bool bool_with_default = 1 [default = true];
      int32 an_int = 7;
    }

    optional float optional_float = 2;
  }

  oneof another_oneof {
    TestEnum an_enum = 16;
    string a_string = 19;
    bytes some_bytes = 20;
    TestNestedProto nested_proto = 26;
    TestNestedProtoWithOneOfs nested_proto_with_oneofs = 27;
  }

  optional bool optional_bool = 2;
  required string required_string = 3;
  repeated int32 repeated_int = 8;
}

message TestProtoWithNativeOneOfs {
  oneof a_oneof {
    option (.j2cl.oneof_options).generate_js_enum = true;

    float a_float = 10;
    double a_double = 14;
  }
}

message TestDenseProtoWithOneOfs {
  oneof a_oneof {
    bool a_bool = 1;
    int32 an_int = 2;
    int64 a_long = 3;
  }
}
